# EECE2560_Final_Project

./: Algorithm.cpp  Algorithm.h  CMakeLists.txt  MakePlot.m  Market.cpp  Market.h  README.md  main.cpp
Forecaster_lib/: Algorithm.cpp  Algorithm.h  CMakeLists.txt  Market.cpp  Market.h  io.cpp  io.h
data/: AAPL.csv  ABBV.csv  BA 11.16.2023 - 11.15.2024.csv  CAT 10.17.2023 - 10.16.2024.csv  Example Output.csv  NVDA.csv  TSM 10.2.2023 - 10.1.2024.csv  output.csv
lib/: io.cpp
